# autoreason

./: .gitignore  README.md  program.md  pyproject.toml
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/runs/[runId]/: page.tsx
frontend/components/: dashboard.tsx  landing-page.tsx  run-screen.tsx
frontend/lib/: autoreason.ts  types.ts
src/autoreason/: __main__.py  cli.py  config.py  engine.py  llm.py  models.py
tests/: __init__.py  test_cli.py  test_council.py  test_engine.py
