[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoreason"
version = "0.1.0"
description = "Recursive argument and counterargument hardening for news inputs"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
autoreason = "autoreason.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
